--- a/index.html
+++ b/index.html
@@ -630,9 +630,6 @@
                 <li>
                   <strong>File Validation:</strong> Type and size restrictions
                 </li>
-                <li>
-                  <strong>Input Sanitization:</strong> All user inputs validated
-                </li>
               </ul>
             </div>
             <aside class="notes">
@@ -640,8 +637,7 @@
               implemented rate limiting to prevent abuse of the encoding
               endpoint - 10 requests per minute per IP address was sufficient
               for legitimate use while preventing spam. File validation ensured
-              only appropriate video formats and sizes were processed. All user
-              inputs were properly sanitized.
+              only appropriate video formats and sizes were processed.
             </aside>
           </section>
           <section class="flex flex-col gap-8">
@@ -721,17 +717,7 @@
         <section>
           <h2>Thank you for your <span class="text-accent">time</span>✨</h2>
           <h4>Happy to answer any questions!</h4>
-          <aside class="notes">
-            Thank you for your attention. I'm excited to discuss any aspects of
-            this project in more detail. Whether you want to dive into specific
-            technical implementation details, discuss the architecture decisions
-            and trade-offs I made, talk about how this system could scale
-            further, or explore integration possibilities with existing systems
-            - I'm ready to answer your questions. I really enjoyed building this
-            project because it combined technical challenges with direct
-            business impact, and I'd love to bring that same approach to your
-            team.
-          </aside>
+          <aside class="notes">Thank you for your attention.</aside>
         </section>
       </div>
     </div>
